crates/mensura-cli/tests/corpus/accept/shape_conformance.mensura
// A store that claims a concrete-unit shape and satisfies it.
unit Person {
  id: string
}

shape PersonRecord {
  unit { Person }
  const { admission: date }
}

store students : PersonRecord {
  unit { Person }
  const { admission: date }
}
